[package]
name = "lnctl-coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared", package = "lnctl-shared" }

anyhow = "1.0"
base64 = "0.13.0"
bitcoin = { version = "0.27", features = ["use-serde"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
flatbuffers = "2.1"
lightning-block-sync = { version = "0.0.104", features = [ "rpc-client" ] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = { version = "1.0" }
sled = "0.34"
tonic = { version = "0.6", features = ["tls", "transport"] }
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1.5", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }
tokio-stream = "0.1"
notify = "4.0"
zerocopy = "0.6.1"

[build-dependencies]
flatc-rust = "0.2"
