[package]
name = "lnctl-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.27", features = ["use-serde"] }
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1.5", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }
tokio-stream = "0.1"
